--- a/StationProject/Components/Pages/AdminPage.razor
+++ b/StationProject/Components/Pages/AdminPage.razor
@@ -2,7 +2,7 @@
 @rendermode InteractiveServer
 
 @using StationProject.Components.Pages.AdminTabs
-@using StationProject.Data.Models.Enums
+@using StationProject.Models.Enums
 
 <div class="f-column" style="padding: 0 60px">
     <div class="f-row gap-20" style="padding: 20px 0">
