--- a/StationProject/Components/Pages/ProductPage.razor
+++ b/StationProject/Components/Pages/ProductPage.razor
@@ -47,7 +47,7 @@ else
     public const string ActiveTabClass = "font-size: bold;";
 
     [Parameter]
-    public string? ProductId { get; set; }
+    public int? ProductId { get; set; }
 
     public int SelectedTabIndex { get; set; }
 
