--- a/StationProject/Components/Pages/HomePage.razor
+++ b/StationProject/Components/Pages/HomePage.razor
@@ -37,12 +37,12 @@
             <div class="fw-row gap-20 space-between" style="flex: 1">
                 @foreach (var category in Categories)
                 {
-                    <div class="f-column gap-10 category-item" style="align-items: center" @onclick="() => _navigation.NavigateToProducts(category.Id)">
-                        <div class="circle-mask">
-                            <img src="@category.FirstImageOrPlaceholderUrl()" alt="catgory"/>
-                        </div>
-                        <span style="align-self: center; font-size: 24px; font-weight: bold;">@category.Name</span>
-                    </div>
+                    @* <div class="f-column gap-10 category-item" style="align-items: center" @onclick="() => _navigation.NavigateToProducts(category.Id)"> *@
+                    @*     <div class="circle-mask"> *@
+                    @*         <img src="@category.FirstImageOrPlaceholderUrl()" alt="catgory"/> *@
+                    @*     </div> *@
+                    @*     <span style="align-self: center; font-size: 24px; font-weight: bold;">@category.Name</span> *@
+                    @* </div> *@
                 }
             </div>
 
@@ -56,7 +56,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Categories = Enumerable.Repeat(await _db.Category.FirstAsync(), 5).ToList();
+        // Categories = Enumerable.Repeat(await _db.Category.FirstAsync(), 5).ToList();
         
         // var now = DateTime.Today;
         // var nowMonthStats = await _db.UserActivityMonthStats.FirstOrDefaultAsync(x => x.CreatedAt.Value.Month == now.Month && x.CreatedAt.Value.Year == now.Year);
